...
        }
        present(activityViewController, animated: true, completion: nil)
    }
    
    // MARK: - Utils
    private func displaySuccessAlert() {
        let alert = UIAlertController(title: "Success", message: "Thank you for sharing!", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Cool", style: .cancel))
        present(alert, animated: true)
    }
    
    private func displayErrorAlert() {
        let alert = UIAlertController(title: "Failure", message: "Something went wrong", preferredStyle: .alert)
...
