...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZbA-9D-CZd">
                                <rect key="frame" x="187" y="538" width="40" height="30"/>
                                <state key="normal" title="Share"/>
                                <connections>
                                    <action selector="actionShare:" destination="qft-de-ixq" eventType="touchUpInside" id="MZM-u0-zT2"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="tOF-pW-Fr6"/>
...
